--- a/NOSOTROS.HTML
+++ b/NOSOTROS.HTML
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,18 @@
     <title>NOSOTROS</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <center><img src="imagenes/quienes-somos.png"> width="50" height="50"/></center>
-    <H1><CENTER>QUIENES SOMOS</CENTER></H1>
-    <H2>Somos estudiantes de grado noveno, interesados en el desarrollo de paginas web <p>estamos interesado en el aprendizaje</p></H2>
-    </body>
+    <center>
+        <image src="imagenes/quienes-somos.png" width="300" height="300"></image>
+    </center>
+    <img src="mifoto.jpg" width="300" height="300" />
+    <H1>
+        <CENTER>QUIENES SOMOS</CENTER>
+    </H1>
+    <H2>Somos estudiantes de grado noveno, interesados en el desarrollo de paginas web <p>estamos interesado en el
+            aprendizaje</p>
+    </H2>
+</body>
+
 </html>
