--- a/home.html
+++ b/home.html
@@ -18,10 +18,10 @@
       <nav>
           <!--menu de navegación, logo, redes sociales>-->  
           <h2>                 
-            <a href="home.html"><img src="imagenes/BTNINICIO.PNG"></a>
-            <a href="NOSOTROS.html"><img src="imagenes/NOSOTROS.PNG"></a>
-            <a href="SERVICIOS.html"><img src="imagenes/SERVICIOS.PNG"></a>
-            <a href="contactos.html"><img src="imagenes/CONTACTO.PNG"></a>
+            <a href="home.html"><img src="BTNINICIO.PNG"></a>
+            <a href="NOSOTROS.html"><img src="NOSOTROS.PNG"></a>
+            <a href="SERVICIOS.html"><img src="SERVICIOS.PNG"></a>
+            <a href="contactos.html"><img src="CONTACTO.PNG"></a>
          </h2>
       </nav>
       <section id="contenido">
